Fix embed footer being cutoff
Tables treat `height` as `min-height` and disregard `min-height`
in firefox.

--- a/r2/r2/public/static/css/reddit-embed.less
+++ b/r2/r2/public/static/css/reddit-embed.less
@@ -44,7 +44,7 @@ p {
     border-bottom-right-radius: @embed-border-radius;
     display: table;
     font-size: 12px;
-    min-height: (@snoo-height + (@snoo-padding * 2));
+    height: (@snoo-height + (@snoo-padding * 2));
     padding: @snoo-padding 18px;
     padding-right: (@snoo-width + (@snoo-padding * 2));
     position: relative;
